--- a/fly.toml
+++ b/fly.toml
@@ -2,7 +2,7 @@ app = "exa"
 primary_region = "iad"
 
 [build]
-  dockerfile = "exa-scheduler/Dockerfile"
+  dockerfile = "Dockerfile"
 
 [env]
   PORT = "8000"
