--- a/fly.toml
+++ b/fly.toml
@@ -1,21 +1,22 @@
-app = "exa"
+app = "exa" # <--- MAKE THIS UNIQUE
 primary_region = "iad"
-
 [build]
   dockerfile = "Dockerfile"
-
 [env]
   PORT = "8000"
   LOG_LEVEL = "INFO"
-
-[mounts]
-  source = "exa_data_vol"
-  destination = "/app/data"
-
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = "stop"
   auto_start_machines = true
   min_machines_running = 1
   processes = ["app"]
+[[vm]]
+  memory = "1gb"
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 1024
+[mounts]
+  source = "exa_data_vol"
+  destination = "/app/data"
