Fix: Restore app name 'exa' in fly.toml to match user's Fly.io project

--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# app = "generated-by-fly" # App name managed by Fly.io UI
+app = "exa"
 primary_region = "iad"
 [build]
   dockerfile = "Dockerfile"
