--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,13 @@
-# app = "managed-by-fly-ui" 
+app = "Exa"
 primary_region = "iad"
+
 [build]
   dockerfile = "Dockerfile"
+
 [env]
   PORT = "8000"
   LOG_LEVEL = "INFO"
+
 [http_service]
   internal_port = 8000
   force_https = true
@@ -12,11 +15,13 @@ primary_region = "iad"
   auto_start_machines = true
   min_machines_running = 1
   processes = ["app"]
+
 [[vm]]
   memory = "1gb"
   cpu_kind = "shared"
   cpus = 1
-  memory_mb = 1024
+  # Removed redundant 'memory_mb' line
+
 [mounts]
   source = "exa_data_vol"
   destination = "/app/data"
