--- a/fly.toml
+++ b/fly.toml
@@ -11,7 +11,7 @@ primary_region = "iad"
 [http_service]
   internal_port = 8000
   force_https = true
-  auto_stop_machines = "stop"
+  auto_stop_machines = false
   auto_start_machines = true
   min_machines_running = 1
   processes = ["app"]
@@ -20,7 +20,6 @@ primary_region = "iad"
   memory = "1gb"
   cpu_kind = "shared"
   cpus = 1
-  # Removed redundant 'memory_mb' line
 
 [mounts]
   source = "exa_data_vol"
